--- a/large-screen/package.json
+++ b/large-screen/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.3.3",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.2.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
