--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
+    "loadsh": "^0.0.4",
     "vue": "^2.6.11",
     "vue-echarts": "^6.2.3",
     "vue-router": "^3.2.0",
