--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue": "^2.6.11",
     "vue-echarts": "^6.2.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-router-keep-alive-helper": "^0.0.28",
+    "vuex": "^3.4.0",
+    "vant": "2.12.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
