--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
     "loadsh": "^0.0.4",
+    "vant": "2.12.4",
     "vue": "^2.6.11",
     "vue-echarts": "^6.2.3",
+    "vue-native-websocket": "^2.0.15",
     "vue-router": "^3.2.0",
     "vue-router-keep-alive-helper": "^0.0.28",
-    "vuex": "^3.4.0",
-    "vant": "2.12.4"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
