--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "axios-cache-adapter": "^2.7.3",
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
     "loadsh": "^0.0.4",
